wwmkchrootdir = $(libexecdir)/warewulf/wwmkchroot

dist_wwmkchroot_SCRIPTS = centos-5.tmpl centos-6.tmpl centos-7.tmpl include-rhel rhel-generic.tmpl sl-5.tmpl sl-6.tmpl sl-7.tmpl functions include-deb debian.tmpl debian7-32.tmpl debian7-64.tmpl golden-system.tmpl

MAINTAINERCLEANFILES = Makefile.in

